[package]
name = "manager"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
user-delegate = { path = "../user-delegate" }


[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
